crates/slab-runtime-macros/tests/ui/backend_handler_non_async.stderr
error: backend handler methods must be async
  --> tests/ui/backend_handler_non_async.rs:14:5
   |
14 |     fn on_inference(&mut self, _req: BackendRequest) {}
   |     ^^
